# ROS-Gazebo-Simulation

./: .README.md.swp  CMakeLists.txt  README.md
config/: control.yaml
gazebo_plugin/: CMakeLists.txt  setup.bash  spring_joint.cc
launch/: control.launch  data.launch  exoskeleton.perspective  pendulum.launch  rqt.launch  world.launch
src/: LD.py  LU.py  RD.py  RU.py  data.py  pendulum.py
urdf/: .robot.xacro.swp  robot.gazebo  robot.xacro
worlds/: exoskeleton.world
